Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127530

Webview does not show header widget on Qt for Android 6.7 and other view issues

XMLWordPrintable

    • Android
    • 050679afa (6.7)

      Customer contacted Qt Support that they need to update to Qt 6.7.2 for Android 14 support and there the header widget does not show properly. On Qt 6.6.3 everything worked correctly.

      We tested with Qt webview mini browser example with Android emulator with Qt 6.6.3, 6.7.1 and 6.7.2 and the example does not run correctly on Qt 6.7. Results attached.

        1. MinibrowserQt663.png
          703 kB
          Tero Pelkonen
        2. MinibrowserQt671.png
          1.56 MB
          Tero Pelkonen
        3. MinibrowserQt672.png
          2.16 MB
          Tero Pelkonen
        For Gerrit Dashboard: QTBUG-127530
        # Subject Branch Project Status CR V

            stromme Christian
            tero.pelkonen Tero Pelkonen
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes